@@ -1,3 +1,11 @@
+2011-06-10  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/cfg/utils.jl: removed (funcs now in rep.util.misc)
+
+	* lisp/sawfish/cfg/layout.jl
+	* lisp/sawfish/cfg/widgets/command.jl
+	* lisp/sawfish/cfg/widgets/keymaps.jl
+	* lisp/sawfish/cfg/widgets/match-windows.jl: updated for above change
+
 2011-06-04  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* configure.in: bump minimum librep to 0.92.1, new funcs required by
 	SawfishConfig
